@@ -19,7 +19,6 @@ package org.springframework.cloud.kubernetes.commons.config;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.springframework.boot.context.properties.ConfigurationProperties;
@@ -64,14 +63,15 @@ public record ConfigMapConfigProperties(@DefaultValue("true") boolean enableApi,
 			return result;
 		}
 
-		return this.sources
-				.stream().flatMap(s -> s.normalize(this.name, this.namespace, this.labels,
-						this.includeProfileSpecificSources, this.failFast, this.useNameAsPrefix, environment))
-				.collect(Collectors.toList());
+		return this.sources.stream()
+			.flatMap(s -> s.normalize(this.name, this.namespace, this.labels, this.includeProfileSpecificSources,
+					this.failFast, this.useNameAsPrefix, environment))
+			.toList();
 	}
 
 	/**
 	 * Config map source.
+	 *
 	 * @param name The name of the ConfigMap.
 	 * @param namespace The namespace where the ConfigMap is found.
 	 * @param labels labels of the config map to look for against.
